isn't that the guy from dee-peche mode?

--- a/index.html
+++ b/index.html
@@ -49,5 +49,8 @@ span.number {
 <body onload="main()">
 <div id="shower">
 </div>
+<a href="https://www.youtube.com/watch?v=k26aeJL1x44"
+><img src="https://avatars.githubusercontent.com/u/7244743?s=120&v=4" alt="I saw a whole thing about him on the VH1"
+></a>
 </body>
 </html>
