I saw a whole thing about him on the VH1

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@ span.number {
 <div id="shower">
 </div>
 <a href="https://www.youtube.com/watch?v=k26aeJL1x44"
-><img src="https://avatars.githubusercontent.com/u/7244743?s=120&v=4" alt="I saw a whole thing about him on the VH1"
+><img src="https://avatars.githubusercontent.com/u/7244743?s=120&v=4"
+      alt="Isn't that the guy from dee-pech mode?"
+      title="I saw a whole thing about him on the VH1"
+      width="120"
+      height="120"
 ></a>
 </body>
 </html>
