--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 var items = [
     ["It has been", "2023-01-18", "days since<br>\tdirck spilled his smoothie"],
     ["It has been", "2023-06-19", "days since<br>\tdirck set off the car alarm"],
+    ["It has been", "2023-08-24", "days since<br>\tmelanie set off the car alarm"],
 ];
 
 function main() {
@@ -51,7 +52,7 @@ span.number {
 </div>
 <a href="https://www.youtube.com/watch?v=k26aeJL1x44"
 ><img src="monarch.png"
-      alt="Isn't that the guy from dee-pech mode?"
+      alt="Isn't that the guy from dee-peche mode?"
       title="I saw a whole thing about him on the VH1"
       width="128"
       height="128"
