important milestone updates

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <script type="text/javascript">
 
 var items = [
-    ["It has been", "2024-02-03", "days since<br>\tdirck set off the car alarm"],
-    ["It has been", "2024-06-09", "days since<br>\tmelanie set off the car alarm"],
-    ["It has been", "2024-05-24", "days since<br>\tdirck spilled his coffee"],
+    ["It has been", "2024-06-10", "days since<br>\tdirck set off the car alarm"],
+    ["It has been", "2024-06-19", "days since<br>\tmelanie set off the car alarm"],
+    ["It has been", "2024-05-24", "days since<br>\tdirck spilled the milk"],
 ];
 
 function main() {
