--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script type="text/javascript">
 
 var items = [
-    ["It has been", "2024-08-18", "days since<br>\tdirck dirck broke a glass"],
+    ["It has been", "2024-08-18", "days since<br>\tdirck broke a glass"],
     ["It has been", "2024-08-17", "days since<br>\tdirck set off the car alarm"],
     ["It has been", "2024-08-14", "days since<br>\tdirck spilled the milk"],
     ["It has been", "2024-08-07", "days since<br>\tmelanie set off the car alarm"],
