--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <script type="text/javascript">
 
 var items = [
-    ["It has been", "2024-10-29", "days since<br>\tdirck set off the car alarm"],
+    ["It has been", "2024-11-20", "days since<br>\tdirck set off the car alarm"],
+    ["It has been", "2024-11-15", "days since<br>\tdirck spilled the milk"],    /* just a guess */
     ["It has been", "2024-10-10", "days since<br>\tmelanie set off the car alarm"],
     ["It has been", "2024-08-18", "days since<br>\tdirck broke a glass"],
-    ["It has been", "2024-08-14", "days since<br>\tdirck spilled the milk"],
 ];
 
 function main() {
