--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <script type="text/javascript">
 
 var items = [
-["It has been", "2024-12-20", "days since<br>\tmelanie set off the car alarm"],
-["It has been", "2024-12-17", "days since<br>\tdirck set off the car alarm"],
-    ["It has been", "2024-12-14", "days since<br>\tdirck spilled the coffee"],
+    ["It has been", "2025-01-08", "days since<br>\tdirck spilled the milk"],
+    ["It has been", "2025-01-07", "days since<br>\tdirck set off the car alarm"],
+    ["It has been", "2024-12-20", "days since<br>\tmelanie set off the car alarm"],
     ["It has been", "2024-08-18", "days since<br>\tdirck broke a glass"],
 ];
 
