--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>It has been X days</title>
+    <title>It has been 0 day(s)</title>
 
 <script type="text/javascript">
 
@@ -72,5 +72,12 @@ span.number {
           width="60"
           height="60"
     ></a>
+
+    <p><img src="0days.jpg"
+        alt="It has been 0 day(s) since I smacked someone for no reason"
+        title="It has been 0 day(s) since I smacked someone for no reason"
+        width="435"
+        height="500"
+>
 </body>
 </html>
